--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
-MAILGUN_API_KEY = a0e954216e91443f8496fa979a763fc3-667818f5-8eb83ab7
-MAILGUN_SENDER_DOMAIN = ""
+MAILGUN_API_KEY=a7bbfeb22108af397d7061d886f4692c-ac3d5f74-a43b6dac
+MAILGUN_SENDER_DOMAIN=''
+DEBUG=True
+SECRET_KEY=django-insecure-+=*hommsn08ati(jx0y9%#ui5s3_r-_w+l(v&#5=l=g*%!@0$m
